fix: line breaks in blue blocks

--- a/#src/scss/_typography.scss
+++ b/#src/scss/_typography.scss
@@ -68,4 +68,7 @@ button {
 
 .line {
   display: block;
+  @media screen and (max-width: 816px) {
+    display: inline;
+  }
 }
